# rental-demo

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  main.py
apps/api/routers/: agent.py  analysis.py  clients.py  feedback.py  intake.py  listings.py  notify.py  query.py  research.py  runs.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/compare/: page.tsx
apps/web/app/listings/: page.tsx
apps/web/app/listings/[id]/: page.tsx
apps/web/app/notify/: page.tsx
apps/web/app/query/: page.tsx
apps/web/app/recommendations/: page.tsx
apps/web/app/research/[id]/: page.tsx
apps/web/app/runs/: page.tsx
apps/web/app/workspace/: page.tsx
apps/web/components/: LicMiniMap.tsx  ListingCard.tsx  RiskBadge.tsx  ScoreRing.tsx  SourceBadge.tsx  StatCard.tsx  WorkflowStepper.tsx
apps/web/components/workspace/: AgentConsole.tsx  ClientPanel.tsx  ClientSelector.tsx  DisplayPanel.tsx  PipelinePanel.tsx  WorkflowProgress.tsx
apps/web/components/workspace/tabs/: ClientProfileTab.tsx  (+6 more)
apps/web/lib/: api.ts  workspaceReducer.ts
schemas/: listing_record.schema.json
seed/lic_studio_demo/: seed_enrichments.json  seed_listings.json  seed_reviews.json
src/pipeline/: storage.py
src/services/: agent_action_service.py  client_service.py  comparison_service.py  feedback_service.py  fit_analysis_service.py  intake_service.py  listing_service.py  llm_client.py  openclaw_service.py  query_service.py  review_research_service.py  run_import_service.py
