[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rental-demo"
version = "0.1.0"
description = "NYC Rental Intelligence Demo — AI-powered rental workflow with web UI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "anthropic>=0.28",
    "openai>=1.30",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
